# ptrs

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  build.rs
.github/: codecov.yml  dependabot.yml
.github/disabled/: rust.yml
.github/workflows/: rust.yml
crates/lyrebird/: Cargo.toml  README.md
crates/lyrebird/src/: README.md  lib.rs  main.rs
crates/lyrebird/src/framing/: packet.rs
crates/lyrebird/src/fwd/: README.md  backend.rs  main.rs
crates/lyrebird/src/handshake/: integration.rs
crates/lyrebird/src/tunnel_mgr/: mod.rs
crates/o5/: Cargo.toml  README.md
crates/o5/doc/: obfs5-spec.txt
crates/o5/src/: client.rs  constants.rs  error.rs  handshake.rs  lib.rs  proto.rs  pt.rs  server.rs  sessions.rs  testing.rs
crates/o5/src/common/: ct.rs  curve25519.rs  kdf.rs  mlkem1024_x25519.rs  mod.rs  ntor_arti.rs  pq_obfs.rs  probdist.rs  replay_filter.rs  skip.rs  utils.rs  x25519_elligator2.rs  xwing.rs
crates/o5/src/common/ntor_arti/: mod.rs
crates/o5/src/common/pq_obfs/: keys.rs  ntorv3.rs
crates/o5/src/framing/: codecs.rs  generic_test.rs  handshake.rs  messages_base.rs  mod.rs  testing.rs
crates/o5/src/framing/messages_v1/: crypto.rs  mod.rs
crates/o5/src/handshake/: README.md  client.rs  handshake_client.rs  handshake_server.rs  integration.rs  keys.rs  kyber.rs  mod.rs  ntor_obfs4.rs  ntorv3.rs  server.rs  utils.rs
crates/o5/src/handshake_old/: handshake_server.rs  integration.rs  mod.rs
crates/o5/src/sessions/: client.rs  server.rs
crates/o5/src/test_utils/: fake_prng.rs  mod.rs  test_keys.rs  tests.rs
crates/o7/: Cargo.toml  README.md
crates/o7/src/: lib.rs
crates/obfs4/: Cargo.toml  README.md
crates/obfs4/_benches/: nacl.rs
crates/obfs4/doc/: obfs4-spec.txt
crates/obfs4/src/: README.md  client.rs  constants.rs  error.rs  lib.rs  proto.rs  pt.rs  server.rs  sessions.rs  stream.rs  testing.rs  traits.rs
crates/obfs4/src/common/: README.md  curve25519.rs  drbg.rs  kdf.rs  mod.rs  probdist.rs  replay_filter.rs  skip.rs  x25519_elligator2.rs
crates/obfs4/src/common/delay/: README.md  mod.rs
crates/obfs4/src/common/ntor_arti/: mod.rs
crates/obfs4/src/framing/: codecs.rs  frame_builder.rs  handshake.rs  messages_base.rs  mod.rs  testing.rs
crates/obfs4/src/framing/messages_v1/: crypto.rs  mod.rs
crates/obfs4/src/handshake/: handshake_client.rs  handshake_server.rs  integration.rs  mod.rs  utils.rs
crates/obfs4/src/obfs4/: client.rs  mod.rs  proto.rs  server.rs  sessions.rs  testing.rs
crates/obfs4/src/obfs4/framing/: codecs.rs  handshake.rs  messages_base.rs  mod.rs  testing.rs
crates/obfs4/src/obfs4/framing/messages_v1/: crypto.rs  mod.rs
crates/obfs4/src/obfs4/handshake/: handshake_client.rs  handshake_server.rs  integration.rs  mod.rs  utils.rs
crates/obfs4/src/test_utils/: fake_prng.rs  mod.rs  tests.rs
crates/obfs4/src/tunnel_mgr/: mod.rs
crates/pt-proxy/: Cargo.toml  README.md
crates/pt-proxy/src/fwd/: README.md  backend.rs  main.rs
crates/ptrs/: Cargo.toml  README.md  Readme.md
crates/ptrs/examples/: README.md  passthrough.rs  split.rs
crates/ptrs/examples/passthrough/: lib.rs
crates/ptrs/src/: args.rs  error.rs  helpers.rs  lib.rs  log.rs  orport.rs  passthrough.rs  pt_spec_v3.rs  tor.rs  water.rs
crates/ptrs/src/ident/: handler.rs
doc/: crate.md  pq-obfs-with-extra-data.md
docs/: frombootstrap.css  illustrated.css  illustrated.js  index.html  obfs4p.html
internal/compatability/obfs4/: Dockerfile  backend.go  conf.go  docker-compose.yaml  go.mod  go.sum  log.go  main.go  termmon.go
internal/compatibility/: Dockerfile  docker-compose-ell2.yaml  docker-compose.yaml
internal/compatibility/ell2_bug_check/: obfs4-bug-check-authed.py  obfs4-bug-check.py  obfs4-subgroup-check.py
internal/compatibility/obfs4/: Dockerfile  go.mod  go.sum  main.go
site/: iat.css  iat.sass  illustrated.css  illustrated.js  index.html  obfs4p.html
src/: README.md  error.rs  lib.rs  stream.rs  traits.rs
src/common/: README.md  ct.rs  curve25519.rs  drbg.rs  elligator2.rs  kdf.rs  mod.rs  probdist.rs  replay_filter.rs  skip.rs
src/common/elligator2/: c_impl.rs  dalek.rs  elligator2.c  elligator2.h  mod.rs
src/common/ntor/: id.rs  keys.rs  kyber.rs  mod.rs  testing.rs  xyber.rs
src/common/ntor_arti/: fast.rs  hs_ntor.rs  mod.rs  ntor.rs  ntor_v3.rs
src/ident/: handler.rs  mod.rs
src/o5/: README.md  mod.rs  transport.rs
src/o5/framing/: packet.rs
src/obfs4/: client.rs  constants.rs  mod.rs  packet.rs  proto.rs  server.rs  sessions.rs  testing.rs
src/obfs4/framing/: codecs.rs  frame_builder.rs  generic_test.rs  handshake.rs  messages_base.rs  messages_v1.rs  mod.rs  packet.rs  testing.rs
src/obfs4/framing/messages_v1/: crypto.rs  mod.rs
src/obfs4/handshake/: README.md  handshake_client.rs  handshake_server.rs  integration.rs  mod.rs  utils.rs
src/obfs4/proto/: client.rs  handshake_client.rs  handshake_server.rs  mod.rs  server.rs  sessions.rs  state.rs  utils.rs
src/test_utils/: fake_prng.rs  mod.rs
src/tunnel_mgr/: metrics.rs  mod.rs
