[package]
name = "obfs"
version = "0.1.0"
edition = "2021"

[lib]
name = "obfs"
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = "0.2.11"
rand = "0.8.5"
rand_core = "0.6.4"

libc = "0.2.150"

digest = { version = "0.9", default-features = false }
siphasher = "1.0.0"
sha2 = "0.10.8"
hmac = { version="0.12.1", features=["reset"]}
hkdf = "0.12.3"

crypto_secretbox = { version="0.1.1", features=["salsa20"]}
subtle = "2.5.0"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom", "reusable_secrets", "elligator2"],  git = "https://github.com/jmwample/curve25519-dalek.git", branch = "elligator2-ntor"}
group = "0.13.0"

lazy_static = "0.1.4"

hex = "0.4.3"
tracing = "0.1.40"
colored = "2.0.4"

pin-project = "1.1.3"
futures = "0.3.29"
tokio = { version = "1.33", features = ["io-util", "rt-multi-thread", "net", "rt", "macros", "sync", "signal", "time", "fs"] }
tokio-util = { version = "0.7.10", features = ["codec", "io"]}
bytes = "1.5.0"

[build-dependencies]
cc = { version = "1.0.83", features = ["parallel"] }
pkg-config = "0.3.16"

[dev-dependencies]
tracing-subscriber = "0.3.18"

# o5 pqc test
# rand = "^0.8.5"
# x25519-dalek = {version="2.0.0", features=["getrandom"]}
pqc_kyber = {version="0.7.1", features=["kyber1024", "std"]}
