[package]
name = "obfs"
version = "0.1.0"
edition = "2021"

[lib]
name = "obfs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fwd_proxy"
test = false
bench = false

[dependencies]
getrandom = "0.2.11"
rand = "0.8.5"
rand_core = "0.6.4"

digest = { version = "0.9", default-features = false }
siphasher = "1.0.0"
sha2 = "0.10.8"
hmac = { version="0.12.1", features=["reset"]}
hkdf = "0.12.3"

crypto_secretbox = { version="0.1.1", features=["salsa20"]}
subtle = "2.5.0"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom", "reusable_secrets", "elligator2"],  git = "https://github.com/jmwample/curve25519-dalek.git", branch = "elligator2-ntor"}
group = "0.13.0"

lazy_static = "0.1.4"

hex = "0.4.3"
tracing = "0.1.40"
colored = "2.0.4"

pin-project = "1.1.3"
futures = "0.3.29"
tokio = { version = "1.33", features = ["io-util", "rt-multi-thread", "net", "rt", "macros", "sync", "signal", "time", "fs"] }
tokio-util = { version = "0.7.10", features = ["codec", "io"]}
bytes = "1.5.0"

# forward proxy binary only
anyhow = "1.0"
tracing-subscriber = "0.3.18"
clap = { version = "4.4.7", features = ["derive"]}
async-compat = "0.2.3"
arti-client = { package = "arti-client", version = "0.11.0", default-features = false }

safelog = { version = "0.3.2" }
#tor-config = { version = "0.9.6" }
#tor-error = { version = "0.5.4", default-features = false, features = ["tracing"] }
#tor-hsrproxy = { version = "0.2.0", optional = true }
#tor-hsservice = { version = "0.4.0", optional = true }
#tor-rpcbase = { version = "0.1.2", optional = true }
tor-rtcompat = { version = "0.9.5", features = ["tokio", "rustls"]}
tor-socksproto = { version = "0.7.5" }

[build-dependencies]
cc = { version = "1.0.83", features = ["parallel"] }

[dev-dependencies]
tracing-subscriber = "0.3.18"

# o5 pqc test
# rand = "^0.8.5"
# x25519-dalek = {version="2.0.0", features=["getrandom"]}
pqc_kyber = {version="0.7.1", features=["kyber1024", "std"]}
