[package]
name = "obfs"
version = "0.1.0"
edition = "2021"

[lib]
name = "obfs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fwd_proxy"
test = false
bench = false

[dependencies]
getrandom = "0.2.11"
rand = "0.8.5"
rand_core = "0.6.4"

digest = { version = "0.10.7", features=["mac"]}
siphasher = "1.0.0"
sha2 = "0.10.8"
hmac = { version="0.12.1", features=["reset"]}
hkdf = "0.12.3"

crypto_secretbox = { version="0.1.1", features=["salsa20"]}
subtle = "2.5.0"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom", "reusable_secrets", "elligator2"],  git = "https://github.com/jmwample/curve25519-dalek.git", branch = "elligator2-ntor"}
group = "0.13.0"

lazy_static = "0.1.4"

hex = "0.4.3"
tracing = "0.1.40"
colored = "2.0.4"

pin-project = "1.1.3"
futures = "0.3.29"
tokio = { version = "1.33", features = ["io-util", "rt-multi-thread", "net", "rt", "macros", "sync", "signal", "time", "fs"] }
tokio-util = { version = "0.7.10", features = ["codec", "io"]}
bytes = "1.5.0"

# forward proxy binary only
anyhow = "1.0"
tracing-subscriber = "0.3.18"
clap = { version = "4.4.7", features = ["derive"]}
async-compat = "0.2.3"
safelog = { version = "0.3.5" }
tor-rtcompat = { version = "0.10.0", features = ["tokio", "rustls"]}
tor-socksproto = { version = "0.10.0" }
arti-client = { package = "arti-client", version = "0.14.0", default-features = false }
# tor-config = { version = "0.9.6" }
# tor-hsrproxy = { version = "0.2.0", optional = true }
# tor-hsservice = { version = "0.4.0", optional = true }
# tor-rpcbase = { version = "0.1.2", optional = true }

# ntor_arti
tor-llcrypto = "0.7.0"
tor-error = "0.6.1"
tor-bytes = "0.10.0"
tor-hscrypto = "0.6.0"
cipher = "0.4.4"
zeroize = "1.7.0"
thiserror = "1.0.56"

# [build-dependencies]
# cc = { version = "1.0.83", features = ["parallel"] }

[dev-dependencies]
tracing-subscriber = "0.3.18"
hex-literal = "0.4.1"
tor-basic-utils = "0.8.0"

# o5 pqc test
pqc_kyber = {version="0.7.1", features=["kyber1024", "std"]}
