[package]
name = "lyrebird"
version = "0.1.0"
edition = "2021"
authors = ["Jack Wampler <jack.wampler@colorado.edu>"]
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Binaries for running pluggable transports"
keywords = ["tor", "censorship", "pluggable", "transports"]
categories = ["network-programming", "cryptography"]
repository = "https://github.com/jmwample/ptrs"

[features]
default = []
debug = ["ptrs/debug", "obfs4/debug"]

[[bin]]
name = "fwd"
path = "src/fwd/main.rs"
test = false
bench = false

[[bin]]
name = "lyrebird"
path = "src/main.rs"
test = false
bench = false

[dependencies]
## internal crates
ptrs = { path="../ptrs", version="0.1.0" }
obfs4 = { path="../obfs4", version="0.1.0" }

# shared deps

# fwd deps
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"]}
fast-socks5 = "0.9.1"
futures = "0.3.29"
safelog = "0.3.5"
thiserror = "1.0.56"
tokio = { version = "1.34", features = ["io-util", "net", "macros", "sync", "signal"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"


# lyrebird deps
