[package]
name = "ptrs"
version = "0.1.0"
edition = "2021"
authors = ["Jack Wampler <jack.wampler@colorado.edu>"]
rust-version = "1.63"
license = "MIT OR Apache-2.0"
description = "Interdaces and utilities supporting pluggable transport implementations"
keywords = ["tor", "censorship", "pluggable", "transports"]
categories = ["network-programming", "cryptography"]
repository = "https://github.com/jmwample/ptrs"


[features]
default = []
debug = []

[lib]
name = "ptrs"
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3.30"
itertools = "0.13.0"
subtle = "2.5.0"
thiserror = "1"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1.40"
url = "2.5.0"

[dev-dependencies]
tracing-subscriber = "0.3.18"
serial_test = "3.0.0"
tempfile = "3"
